--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.header {
+  height: 100vh;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.8)
+  );
+  background-size: cover;
+  background-position: top;
+
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-head {
+  font-family: 'Lexend Deca', sans-serif;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.task-input {
+  margin-top: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-form-submit {
+  padding: 10px 20px;
+  margin-top: 15px;
+  border-radius: 4px;
+  background-color: rgb(255, 214, 80);
 }
 
-.App-link {
-  color: #61dafb;
+.btnSubmit:visited,
+.btnSubmit:link {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #777;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnSubmit:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+}
+
+.filter-box {
+  margin-top: 40px;
+}
+
+.filter-btn {
+  background-color: rgb(129, 197, 252);
+  padding: 7px 10px 7px 10px;
+  margin-bottom: 5px;
+  border: 2px solid rgb(102, 183, 250);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.todo-item-box {
+  margin-top: 30px;
+}
+
+.todo-item {
+  padding: 8px;
+  padding-left: 12px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.delete-box {
+  padding-top: 20px;
+}
+
+.delete-btn {
+  background-color: rgb(252, 129, 129);
+  padding: 7px 10px 7px 10px;
+  margin-bottom: 5px;
+  border: 2px solid rgb(252, 60, 54);
+  border-radius: 4px;
+  cursor: pointer;
 }
